[tool.poetry]
name = "goto-eater-crawler"
version = "0.1.0"
description = "goto eat crawler"
authors = ["KOIZUMI teruaki <1755900+terukizm@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
Scrapy = "^2.4.1"
xlrd = "^1.2.0"
logzero = "^1.6.3"
requests = "^2.25.0"
pyppeteer = "^0.2.2"
pandas = "^1.1.4"
csvkit = "^1.0.5"
PyMuPDF = "^1.18.5"
tabula-py = "^2.2.0"
demjson = "^2.2.4"


black = "^20.8b1"
nest-asyncio = "^1.4.3"


[tool.poetry.dev-dependencies]
isort = "^5.7.0"
taskipy = "^1.6.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
include_trailing_comma = true
multi_line_output = 3

[tool.taskipy.tasks]
format = "task black && task isort"
black = "black ."
isort = "isort ."
csvsort = 'csvsort -c 1 -d "," -q \"'
